tests/types/errors/optional_member_access_without_check.mog
type Dog struct {
    str bark() {
        return "woof"
    }
}

var d Dog? = Dog()
print(d.bark())
